--- a/css/style.css
+++ b/css/style.css
@@ -102,8 +102,9 @@ button {
 ============================================================================= */
 body {
   color: #727272;
+  background: url(../img/background.jpg);
   background-color: #fff;
-  font-family: "Roboto", sans-serif;
+  font-family: "Droid", serif;
   font-size: 16px;
   font-weight: 300;
   line-height: 1.6;
@@ -188,6 +189,7 @@ section {
 
 .header__title {
   margin: 0;
+  text-align: center;
 }
 
 /* =============================================================================
@@ -311,8 +313,8 @@ section {
 .mm-menu__header {
   position: relative;
   width: 100%;
-  height: 188px;
-  background-color: #CDDC39;
+  height: 122px;
+  background-color: #2d2d2d;
 }
 
 .mm-menu__title {
